syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.clockInOut";
option java_outer_classname = "ClockInClockOutService";

// Defining the service containing the rpc methods
service Clockin {
	//Unary RPC
	//The client requests clock in, the server returns clockin response
	rpc ClockIn (ClockinRequest) returns (ClockinResponse) {
	}

	//Unary RPC
	//The client requests clockout, the server returns clockout response
	rpc ClockOut (ClockoutRequest) returns (ClockoutResponse) {
	}
}

// Defining the data types
message ClockinRequest {
	string employeeId = 1;
}

message ClockinResponse {
	string employeeId = 1;
	string date = 2;
	string timein = 3;
}

message ClockoutRequest {
	string employeeId = 1;
	string break = 2;
	string endShift = 3;
}

message ClockoutResponse {
	string employeeId = 1;
	string date = 2;
	string timeout = 3;
}
