syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.conferenceRoom";
option java_outer_classname = "ConferenceRoomService";

// Defining the service containing methods
service ConferenceRoom {

	//Server stream rpc
	//Client requests available conference rooms, server returns a stream of available rooms
	rpc GetAvailableRooms (GetAvailableRoomsRequest) returns (stream GetAvailableRoomsResponse) {}

	//Unary rpc
	//Client books a conference room, server returns confirmation message
	rpc BookConferenceRoom (BookConferenceRoomRequest) returns (BookConferenceRoomResponse) {}

	//Bidirectional streaming
	//Sensor keeps sending how many people enter the conference room , the server keeps returning the total occupancy data
	rpc CalculateLiveOccupancy (stream LiveOccupancyRequest) returns (LiveOccupancyResponse) {}
}

// Defining the data types
message GetAvailableRoomsRequest {
	string date = 1;
	string timeslot = 2;
}

message GetAvailableRoomsResponse {
	string conferenceRoomName = 2;
}

message BookConferenceRoomRequest {
	string date = 1;
	string timeslot = 2;
	string conferenceRoomName = 4;
}

message BookConferenceRoomResponse {
	string message = 1;
}

message LiveOccupancyRequest {
	int32 numPeople = 1;
}

message LiveOccupancyResponse {
	int32 totalOccupancy = 1;

}