syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.printer";
option java_outer_classname = "PrinterService";

// Defining the service containing methods
service Printer {
	//Bidirectional RPC
	//Client sends a stream of documents to print, server returns a stream of confirmation messages
	rpc PrintAllDocuments (stream PrintAllDocumentsRequest) returns ( stream PrintAllDocumentsResponse) {}
}

// Defining the data types
message PrintAllDocumentsRequest {
	string documentName = 1;
}

message PrintAllDocumentsResponse {
	string message = 1;
}



